<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="digyb.la03.ybprog.LoginActivity"
    android:padding="10dp"
    android:background="@color/LoginActivity_BG_color">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_centerVertical="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/loginActivity_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/LoginActivity_Ln_color">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/LoginActivity_st_logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LoginActivity_st_email"
                    android:inputType="textEmailAddress"
                    android:theme="@style/MyEditText"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/hint_color"
                app:hintTextAppearance="@style/MyHintText">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LoginActivity_st_password"
                    android:inputType="textPassword"
                    android:theme="@style/MyEditText"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/LoginActivity_st_btn_login"
                android:textAllCaps="false"
                android:radius="50dp"
                android:textColor="@color/LoginActivity_txtbtn_signup_color"
                android:textSize="20sp"
                android:background="@color/LoginActivity_btn_color"
                android:onClick="btn_Login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/LoginActivity_st_forgetpass"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/LoginActivity_st_or"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/LoginActivity_st_btn_signup"
                android:textAllCaps="false"
                android:radius="50dp"
                android:textColor="@color/LoginActivity_txtbtn_login_color"
                android:textSize="20sp"
                android:background="@drawable/stroke"
                android:onClick="btn_SignUp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
